[gd_scene load_steps=21 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://MAIN/sprites/tank/tank1.png" type="Texture" id=2]
[ext_resource path="res://MAIN/World.gd" type="Script" id=3]
[ext_resource path="res://MAIN/sprites/other/circular-arrows.png" type="Texture" id=4]
[ext_resource path="res://MAIN/Menu Select.wav" type="AudioStream" id=5]
[ext_resource path="res://MAIN/sprites/guns/gun (1).png" type="Texture" id=6]
[ext_resource path="res://MAIN/sprites/other/zoombutton.png" type="Texture" id=7]
[ext_resource path="res://MAIN/Bubble Bobble.otf" type="DynamicFontData" id=8]
[ext_resource path="res://MAIN/Tank.tscn" type="PackedScene" id=9]
[ext_resource path="res://MAIN/Helicopter.tscn" type="PackedScene" id=10]
[ext_resource path="res://MAIN/Joystick.tscn" type="PackedScene" id=11]
[ext_resource path="res://MAIN/WinterBackground.tscn" type="PackedScene" id=12]
[ext_resource path="res://MAIN/sprites/other/grenade.png" type="Texture" id=13]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0.0823529, 0.466667, 1 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 8 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="TileSet" id=5]
0/name = "icon.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 0, 0, 0, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 4 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="TileSet" id=7]
0/name = "icon.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 6 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[node name="World" type="Node2D"]
script = ExtResource( 3 )

[node name="WinterBackground" parent="." instance=ExtResource( 12 )]

[node name="press_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -30.0
pitch_scale = 0.49

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ZoomCam" type="TouchScreenButton" parent="CanvasLayer"]
modulate = Color( 0.439216, 0.498039, 0.956863, 1 )
normal = ExtResource( 7 )
pressed = ExtResource( 7 )

[node name="MENU" type="Button" parent="CanvasLayer"]
margin_left = 566.567
margin_top = 22.9094
margin_right = 771.567
margin_bottom = 83.9094
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.686275, 0.729412, 1 )
text = "Go TO MENU"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="change_gun" type="TouchScreenButton" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0.694118 )
position = Vector2( 813.614, 542.101 )
normal = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="CanvasLayer/change_gun"]
position = Vector2( 47.9305, 51.8817 )
scale = Vector2( 0.313202, 0.31162 )
texture = ExtResource( 6 )

[node name="grenade" type="TouchScreenButton" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0.694118 )
position = Vector2( 376.539, 562.821 )
normal = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="CanvasLayer/grenade"]
position = Vector2( 45.6492, 49.1793 )
scale = Vector2( 0.859128, 0.639163 )
texture = ExtResource( 13 )

[node name="change_vehicle" type="TextureButton" parent="CanvasLayer"]
margin_left = 1154.0
margin_top = 289.0
margin_right = 1278.0
margin_bottom = 392.0
texture_normal = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="CanvasLayer/change_vehicle"]
position = Vector2( 59.0771, 53.2864 )
scale = Vector2( 0.07, 0.1 )
texture = ExtResource( 2 )

[node name="move_joystick" parent="CanvasLayer" instance=ExtResource( 11 )]
position = Vector2( 200, 530 )

[node name="aim_joystick" parent="CanvasLayer" instance=ExtResource( 11 )]
position = Vector2( 1080, 530 )

[node name="FpsLabel" type="Label" parent="CanvasLayer"]
margin_left = 412.0
margin_top = 23.0
margin_right = 524.0
margin_bottom = 84.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap" type="TileMap" parent="."]
visible = false
tile_set = SubResource( 5 )
collision_mask = 0
format = 1
tile_data = PoolIntArray( -1507334, 0, 0, -1441798, 0, 0, -1376262, 0, 0, -1310726, 0, 0, -1245190, 0, 0, -1179668, 0, 0, -1179654, 0, 0, -1245102, 0, 0, -1114132, 0, 0, -1114118, 0, 0, -1179566, 0, 0, -1048596, 0, 0, -1048582, 0, 0, -1114030, 0, 0, -983060, 0, 0, -983046, 0, 0, -1048494, 0, 0, -917524, 0, 0, -917510, 0, 0, -982958, 0, 0, -851988, 0, 0, -851974, 0, 0, -917422, 0, 0, -786452, 0, 0, -786438, 0, 0, -851886, 0, 0, -720916, 0, 0, -720902, 0, 0, -786350, 0, 0, -655380, 0, 0, -655366, 0, 0, -720814, 0, 0, -589844, 0, 0, -589830, 0, 0, -655278, 0, 0, -524308, 0, 0, -524294, 0, 0, -589742, 0, 0, -458772, 0, 0, -458758, 0, 0, -524206, 0, 0, -393236, 0, 0, -393222, 0, 0, -458670, 0, 0, -327700, 0, 0, -327686, 0, 0, -393134, 0, 0, -262164, 0, 0, -262150, 0, 0, -327598, 0, 0, -196628, 0, 0, -196614, 0, 0, -262062, 0, 0, -131092, 0, 0, -131078, 0, 0, -196526, 0, 0, -65556, 0, 0, -65542, 0, 0, -130990, 0, 0, -20, 0, 0, -6, 0, 0, -65454, 0, 0, 65516, 0, 0, 65530, 0, 0, 82, 0, 0, 131052, 0, 0, 131066, 0, 0, 65618, 0, 0, 196588, 0, 0, 196602, 0, 0, 131154, 0, 0, 262124, 0, 0, 262138, 0, 0, 196690, 0, 0, 327660, 0, 0, 327674, 0, 0, 262226, 0, 0, 393196, 0, 0, 393210, 0, 0, 327762, 0, 0, 458732, 0, 0, 458746, 0, 0, 393298, 0, 0, 524268, 0, 0, 524282, 0, 0, 458834, 0, 0, 589804, 0, 0, 589818, 0, 0, 524370, 0, 0, 655340, 0, 0, 655354, 0, 0, 589906, 0, 0, 720876, 0, 0, 720890, 0, 0, 655442, 0, 0, 786412, 0, 0, 786413, 0, 0, 786414, 0, 0, 786415, 0, 0, 786416, 0, 0, 786417, 0, 0, 786418, 0, 0, 786419, 0, 0, 786420, 0, 0, 786421, 0, 0, 786422, 0, 0, 786423, 0, 0, 786424, 0, 0, 786425, 0, 0, 786426, 0, 0, 786427, 0, 0, 786428, 0, 0, 786429, 0, 0, 786430, 0, 0, 786431, 0, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 720910, 0, 0, 720911, 0, 0, 720912, 0, 0, 720913, 0, 0, 720914, 0, 0, 720915, 0, 0, 720916, 0, 0, 720917, 0, 0, 720918, 0, 0, 720919, 0, 0, 720920, 0, 0, 720921, 0, 0, 720922, 0, 0, 720923, 0, 0, 720924, 0, 0, 720925, 0, 0, 720926, 0, 0, 720927, 0, 0, 720928, 0, 0, 720929, 0, 0, 720930, 0, 0, 720931, 0, 0, 720932, 0, 0, 720933, 0, 0, 720934, 0, 0, 720935, 0, 0, 720936, 0, 0, 720937, 0, 0, 720938, 0, 0, 720939, 0, 0, 720940, 0, 0, 720941, 0, 0, 720942, 0, 0, 720943, 0, 0, 720944, 0, 0, 720945, 0, 0, 720946, 0, 0, 720947, 0, 0, 720948, 0, 0, 720949, 0, 0, 720950, 0, 0, 720951, 0, 0, 720952, 0, 0, 720953, 0, 0, 720954, 0, 0, 720955, 0, 0, 720956, 0, 0, 720957, 0, 0, 720958, 0, 0, 720959, 0, 0, 720960, 0, 0, 720961, 0, 0, 720962, 0, 0, 720963, 0, 0, 720964, 0, 0, 720965, 0, 0, 720966, 0, 0, 720967, 0, 0, 720968, 0, 0, 720969, 0, 0, 720970, 0, 0, 720971, 0, 0, 720972, 0, 0, 720973, 0, 0, 720974, 0, 0, 720975, 0, 0, 720976, 0, 0, 720977, 0, 0, 720978, 0, 0 )

[node name="TileMap2" type="TileMap" parent="."]
visible = false
tile_set = SubResource( 7 )
collision_mask = 0
format = 1
tile_data = PoolIntArray( -1179667, 0, 0, -1179666, 0, 0, -1179665, 0, 0, -1179664, 0, 0, -1179663, 0, 0, -1179662, 0, 0, -1179661, 0, 0, -1179660, 0, 0, -1179659, 0, 0, -1179658, 0, 0, -1179657, 0, 0, -1179656, 0, 0, -1179655, 0, 0, -1179654, 0, 0, -1179653, 0, 0, -1179652, 0, 0, -1179651, 0, 0, -1179650, 0, 0, -1179649, 0, 0, -1245184, 0, 0, -1245183, 0, 0, -1245182, 0, 0, -1245181, 0, 0, -1245180, 0, 0, -1245179, 0, 0, -1245178, 0, 0, -1245177, 0, 0, -1245176, 0, 0, -1245175, 0, 0, -1245174, 0, 0, -1245173, 0, 0, -1245172, 0, 0, -1245171, 0, 0, -1245170, 0, 0, -1245169, 0, 0, -1245168, 0, 0, -1245167, 0, 0, -1245166, 0, 0, -1245165, 0, 0, -1245164, 0, 0, -1245163, 0, 0, -1245162, 0, 0, -1245161, 0, 0, -1245160, 0, 0, -1245159, 0, 0, -1245158, 0, 0, -1245157, 0, 0, -1245156, 0, 0, -1245155, 0, 0, -1245154, 0, 0, -1245153, 0, 0, -1245152, 0, 0, -1245151, 0, 0, -1245150, 0, 0, -1245149, 0, 0, -1245148, 0, 0, -1245147, 0, 0, -1245146, 0, 0, -1245145, 0, 0, -1245144, 0, 0, -1245143, 0, 0, -1245142, 0, 0, -1245141, 0, 0, -1245140, 0, 0, -1245139, 0, 0, -1245138, 0, 0, -1245137, 0, 0, -1245136, 0, 0, -1245135, 0, 0, -1245134, 0, 0, -1245133, 0, 0, -1245132, 0, 0, -1245131, 0, 0, -1245130, 0, 0, -1245129, 0, 0, -1245128, 0, 0, -1245127, 0, 0, -1245126, 0, 0, -1245125, 0, 0, -1245124, 0, 0, -1245123, 0, 0, -1245122, 0, 0, -1245121, 0, 0, -1245120, 0, 0, -1245119, 0, 0, -1245118, 0, 0, -1245117, 0, 0, -1245116, 0, 0, -1245115, 0, 0, -1245114, 0, 0, -1245113, 0, 0, -1245112, 0, 0, -1245111, 0, 0, -1245110, 0, 0, -1245109, 0, 0, -1245108, 0, 0, -1245107, 0, 0, -1245106, 0, 0, -1245105, 0, 0, -1245104, 0, 0, -1245103, 0, 0, -1245102, 0, 0 )

[node name="CameraTween" type="Tween" parent="."]

[node name="Vehicles" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="Tank" parent="Vehicles" instance=ExtResource( 9 )]
position = Vector2( 716.516, 580.042 )

[node name="Helicopter" parent="Vehicles" instance=ExtResource( 10 )]
position = Vector2( 1457.58, 600 )

[node name="Tank2" parent="Vehicles" instance=ExtResource( 9 )]
position = Vector2( 4933.28, 600 )

[node name="buttons_timer" type="Timer" parent="."]
[connection signal="pressed" from="CanvasLayer/ZoomCam" to="." method="_on_ZoomCam_pressed"]
[connection signal="pressed" from="CanvasLayer/MENU" to="." method="_on_MENU_pressed"]
[connection signal="pressed" from="CanvasLayer/change_vehicle" to="." method="_on_change_vehicle_pressed"]
